[package]
name = "sys-locale"
version = "0.2.3"
authors = ["1Password"]
description = "Small and lightweight library to obtain the active system locale"
keywords = ["locale", "i18n", "localization", "nostd"]
repository = "https://github.com/1Password/sys-locale"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.45"
features = [
    "Win32_Globalization",
    "Win32_System_SystemServices"
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = { version = "0.2"}
web-sys = { version = "0.3", features = ["Window", "WorkerGlobalScope", "Navigator", "WorkerNavigator"] }
